apps/schoolmode/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schoolmode
  namespace: schoolmode
spec:
  type: ClusterIP
  selector:
    app: schoolmode
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
